@@ -1,5 +1,8 @@
 #! /usr/bin/make -f
 
+# for DEB_VERSION_UPSTREAM
+include /usr/share/dpkg/pkg-info.mk
+
 export DH_VERBOSE=1
 # Build.PL relies on the munin modules to be found locally
 export PERL5LIB=.
@@ -14,7 +17,7 @@ MAKEOPTS = CONFIG=debian/Makefile.config INSTALL_PLUGINS="auto manual snmpauto c
 
 override_dh_auto_build:
 	# ./getversion reads RELEASE if it exists
-	dpkg-parsechangelog | sed -n 's/^Version: //p' > RELEASE
+	echo "$(DEB_VERSION_UPSTREAM)" >RELEASE
 	chmod 755 debian/ostype_helper
 	dh_auto_build -- $(MAKEOPTS)
 
